Fix initializing flash by not initializing the OE (output enable) pin before sending zeroes to the shift registers. Web app reacts to errors nicely now.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -14,6 +14,19 @@ html, body , div.app-container {
 }
 
 div.app-container {
+  display: flex;
+  flex-direction: column;
+
+  > section.status {
+    &.error {
+      color: red;
+    }
+
+    &.success {
+      color: green;
+    }
+  }
+
   > section.authorized {
     display: flex;
     flex-direction: column;
